<resources>

    <string name="app_name">ForkIt</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Recipe List page -->
    <string name="recipe_list_empty_title">No Recipes saved!</string>
    <string name="recipe_list_empty_message">Tap the + button to add your first recipe.</string>
    <string name="recipe_list_menu_logout">Logout</string>

    <!-- Add Recipe page -->
    <string name="add_recipe_activity_title">Add Recipe</string>
    <string name="add_recipe_edittext_name_hint">Recipe name&#8230;</string>
    <string name="add_recipe_edittext_ingredient_hint">Add ingredient&#8230;</string>
    <string name="add_recipe_button_save_recipe">Save</string>
    <string name="add_recipe_button_add_ingredient">Add</string>
    <string name="add_recipe_message_completed">Recipe saved!</string>
    <string name="add_recipe_message_name_empty">Please enter a name</string>
    <string name="error_ingredient_empty">No ingredient to add</string>

    <!-- Login page -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <!-- Splash Page -->
    <string name="splash_text">Fork It!</string>
    <string name="splash_sub_text">Splash screen</string>

</resources>
